--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,6 +23,7 @@ option(USE_OPENAL_DLOPEN "" ON)
 option(USE_CURL_DLOPEN "" ON)
 option(USE_VOIP "" ON)
 option(USE_MUMBLE "" ON)
+option(USE_HTTP_SERVER "" ON)
 
 if (MSVC)
 	set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /MANIFEST:NO")
